--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 							<a href="demos/writer/images/hero/slider-book-lg.jpg" data-lightbox="gallery-item" class="slider-book-img" data-animate="fadeInUp"><img src="demos/writer/images/hero/slider-book.png" alt=""></a>
 							<a href="demos/writer/images/hero/slider-book2-lg.jpg" data-lightbox="gallery-item" class="slider-book-img" data-animate="fadeInUp" data-delay="300"><img src="demos/writer/images/hero/slider-book2.png" alt=""></a>
 							<div class="emphasis-title bottommargin-sm">
-								<h1 class="400" data-animate="fadeInUp" data-delay="600">Latest released by<br><span><em>Arnold Newman</em></span>.</h1>
+								<h1 class="400" data-animate="fadeInUp" data-delay="600">Latest released by<br><span><em>Kaori Kato</em></span>.</h1>
 							</div>
 							<a data-animate="fadeIn" class="button button-large button-border button-white button-light button-rounded capitalize notopmargin"><span>Get it Now</span></a><br class="d-block d-sm-none">
 							<a data-animate="fadeIn" data-delay="1600" href="https://www.youtube.com/watch?v=auJWC-o-RiY" class="hero-action-link d-inline-block ml-2 mt-2 ml-sm-3 mt-sm-0" data-lightbox="iframe"><i class="icon-play-sign"></i> Watch the Tailor</a>
