訳書リスト作成

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Writer | Canvas</title>
+	<title>加藤かおり：仏日翻訳者</title>
 
 </head>
 
@@ -66,14 +66,21 @@
 
 						<ul>
 							<li><a href="demo-writer.html"><div>Home</div></a></li>
-							<li><a href="demos/writer/article-single.html"><div>Articles</div></a>
+							<li><a href="demos/writer/article-single.html"><div>訳書リスト</div></a>
 								<ul>
-									<li><a href="demos/writer/article-single.html"><div>A Key of Mind</div></a></li>
-									<li><a href="demos/writer/article-single.html"><div>Knight of the Light</div></a></li>
-									<li><a href="demos/writer/article-single.html"><div>Jars &amp; The Ten Killer</div></a></li>
-									<li><a href="demos/writer/article-single.html"><div>Love without Flaws</div></a></li>
-									<li><a href="demos/writer/article-single.html"><div>Pirates of Water</div></a></li>
-									<li><a href="demos/writer/article-single.html"><div>Amusing the Jungle</div></a></li>
+									<li><a href="demos/writer/article-single.html"><div>すべては救済のために　デニ・ムクウェゲ自伝</div></a></li>
+									<li><a href="demos/writer/article-single.html"><div>エマヌエル・マクロン フランス大統領に上り詰めた完璧な青年</div></a></li>
+									<li><a href="demos/writer/article-single.html"><div>ちいさな国で</div></a></li>
+									<li><a href="demos/writer/article-single.html"><div>ささやかな手記</div></a></li>
+									<li><a href="demos/writer/article-single.html"><div>マプチェの女</div></a></li>
+									<li><a href="demos/writer/article-single.html"><div>星の王子さまの美しい物語</div></a></li>
+									<li><a href="demos/writer/article-single.html"><div>いま、目の前で起きていることの意味について--行動する33の知性</div></a></li>
+									<li><a href="demos/writer/article-single.html"><div>ココ・アヴァン・シャネル　愛とファッションの革命児</div></a></li>
+									<li><a href="demos/writer/article-single.html"><div>ノーと私</div></a></li>
+									<li><a href="demos/writer/article-single.html"><div>タラ・ダンカン</div></a></li>
+									<li><a href="demos/writer/article-single.html"><div>幻想の帝国　中国の声なき声</div></a></li>
+
+									<li><a href="demos/writer/article-single.html"><div>動くのは瞼だけ　ロックトイン・シンドロームからの奇跡の再生</div></a></li>
 								</ul>
 							</li>
 							<li><a href="demos/writer/about-me.html"><div>About Me</div></a></li>
