カバー画像差し替え　略歴

--- a/demos/writer/about-me.html
+++ b/demos/writer/about-me.html
@@ -101,8 +101,8 @@
 					<div class="row clearfix">
 						<div class="col-lg-6 offset-lg-1 col-md-8" data-lightbox="gallery">
 							<div class="emphasis-title bottommargin-sm">
-								<h1><span><em>Arnold Newman.</em></span></h1>
-								<p class="lead text-white-50">Appropriately target progressive bandwidth whereas focused scenarios. Holisticly synergize empowered catalysts for change vis-a-vis timely action items. Completely initiate frictionless innovation vis-a-vis magnetic portals. Synergistically leverage other's stand-alone expertise and client-centered catalysts for change.</p>
+								<h1><span><em>加藤かおり　略歴</em></span></h1>
+								<p class="lead text-white-50">1966年　山形県山形市生まれ<br>国際基督教大学教養学部社会科学科卒業<br>2000年よりフリーランスの仏日翻訳者</p>
 							</div>
 							<a href="../../demo-writer.html#portfolio" data-animate="fadeIn" class="button button-xlarge bg-white button-white button-light text-dark button-rounded capitalize notopmargin ls0 t600" style="font-size: 16px;"><span>Check Out my Books</span></a>
 							<a data-animate="fadeIn" data-delay="1600" href="https://www.youtube.com/watch?v=auJWC-o-RiY" class="hero-action-link" data-lightbox="iframe"><i class="icon-play-sign"></i> Watch the Trailor</a>
