header リンク修正

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 					<!-- Logo
 					============================================= -->
 					<div id="logo">
-						<a href="demo-writer.html" class="standard-logo"><img src="demos/writer/images/logo.png" alt="Canvas Logo"></a>
-						<a href="demo-writer.html" class="retina-logo"><img src="demos/writer/images/logo@2x.png" alt="Canvas Logo"></a>
+						<a href="index.html" class="standard-logo"><img src="demos/writer/images/logo.png" alt="Canvas Logo"></a>
+						<a href="index.html" class="retina-logo"><img src="demos/writer/images/logo@2x.png" alt="Canvas Logo"></a>
 					</div><!-- #logo end -->
 
 					<!-- Primary Navigation
@@ -65,7 +65,7 @@
 					<nav id="primary-menu" class="not-dark clearfix">
 
 						<ul>
-							<li><a href="demo-writer.html"><div>Home</div></a></li>
+							<li><a href="index.html"><div>Home</div></a></li>
 							<li><a href="demos/writer/article-single.html"><div>訳書リスト</div></a>
 								<ul>
 									<li><a href="demos/writer/article-single.html"><div>すべては救済のために　デニ・ムクウェゲ自伝</div></a></li>
@@ -83,11 +83,16 @@
 									<li><a href="demos/writer/article-single.html"><div>動くのは瞼だけ　ロックトイン・シンドロームからの奇跡の再生</div></a></li>
 								</ul>
 							</li>
-							<li><a href="demos/writer/about-me.html"><div>About Me</div></a></li>
+							<li><a href="demos/writer/about-me.html"><div>略歴</div></a>
+							  <ul>
+									<li><div><p style="color:#333;">1966年　山形県山形市生まれ<br>国際基督教大学教養学部社会科学科卒業<br>2000年よりフリーランスの仏日翻訳者</p></div></li>
+								</ul>
+							</li>
+
 						</ul>
 
 						<ul>
-							<li><a href="demos/writer/testimonials.html"><div>Testimoials</div></a></li>
+							<li><a href="demos/writer/testimonials.html"><div>Awards</div></a></li>
 							<li><a href="demos/writer/contact.html"><div>Contact</div></a></li>
 							<li><a href="demos/writer/login.html"><div>Login</div></a></li>
 						</ul>
