--- a/index.html
+++ b/index.html
@@ -92,9 +92,8 @@
 						</ul>
 
 						<ul>
-							<li><a href="demos/writer/testimonials.html"><div>Awards</div></a></li>
+							<li><a href="index.html#section-testimonial"><div>Awards</div></a></li>
 							<li><a href="demos/writer/contact.html"><div>Contact</div></a></li>
-							<li><a href="demos/writer/login.html"><div>Login</div></a></li>
 						</ul>
 
 					</nav><!-- #primary-menu end -->
@@ -116,10 +115,10 @@
 							<a href="demos/writer/images/hero/slider-book-lg.jpg" data-lightbox="gallery-item" class="slider-book-img" data-animate="fadeInUp"><img src="demos/writer/images/hero/slider-book.png" alt=""></a>
 							<a href="demos/writer/images/hero/slider-book2-lg.jpg" data-lightbox="gallery-item" class="slider-book-img" data-animate="fadeInUp" data-delay="300"><img src="demos/writer/images/hero/slider-book2.png" alt=""></a>
 							<div class="emphasis-title bottommargin-sm">
-								<h1 class="400" data-animate="fadeInUp" data-delay="600">Latest released by<br><span><em>Kaori Kato</em></span>.</h1>
+								<h1 class="400" data-animate="fadeInUp" data-delay="600">最新訳書<br><span><em>加藤かおり</em></span>.</h1>
 							</div>
-							<a data-animate="fadeIn" class="button button-large button-border button-white button-light button-rounded capitalize notopmargin"><span>Get it Now</span></a><br class="d-block d-sm-none">
-							<a data-animate="fadeIn" data-delay="1600" href="https://www.youtube.com/watch?v=auJWC-o-RiY" class="hero-action-link d-inline-block ml-2 mt-2 ml-sm-3 mt-sm-0" data-lightbox="iframe"><i class="icon-play-sign"></i> Watch the Tailor</a>
+							<a data-animate="fadeIn" class="button button-large button-border button-white button-light button-rounded capitalize notopmargin" href="https://www.amazon.co.jp/%E3%81%99%E3%81%B9%E3%81%A6%E3%81%AF%E6%95%91%E6%B8%88%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AB%E2%80%95%E2%80%95%E3%83%87%E3%83%8B%E3%83%BB%E3%83%A0%E3%82%AF%E3%82%A6%E3%82%A7%E3%82%B2%E8%87%AA%E4%BC%9D-%E3%83%87%E3%83%8B%E3%83%BB%E3%83%A0%E3%82%AF%E3%82%A6%E3%82%A7%E3%82%B2/dp/4751529358/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&keywords=%E3%81%99%E3%81%B9%E3%81%A6%E3%81%AF%E6%95%91%E6%B8%88%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AB&qid=1565922205&s=books&sr=1-1"><span>Get it Now</span></a><br class="d-block d-sm-none">
+
 						</div>
 					</div>
 				</div>
