最新訳書表示2

--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
 				<div class="container dark clearfix">
 					<div class="row clearfix">
 						<div class="col-lg-6 offset-lg-1 col-md-8" data-lightbox="gallery">
-							<a href="demos/writer/images/hero/slider-book-lg.jpg" data-lightbox="gallery-item" class="slider-book-img" data-animate="fadeInUp"><img src="demos/writer/images/hero/slider-book.png" alt=""></a>
-							<a href="demos/writer/images/hero/slider-book2-lg.jpg" data-lightbox="gallery-item" class="slider-book-img" data-animate="fadeInUp" data-delay="300"><img src="demos/writer/images/hero/slider-book2.png" alt=""></a>
+							<a href="demos/writer/images/hero/book-deni.jpg gallery-item" class="slider-book-img" data-animate="fadeInUp"><img src="demos/writer/images/hero/book-deni.jpg" alt=""></a>
+							<!-- <a href="demos/writer/images/hero/slider-book2-lg.jpg" data-lightbox="gallery-item" class="slider-book-img" data-animate="fadeInUp" data-delay="300"><img src="demos/writer/images/hero/book-deni2.jpg" alt=""></a> -->
 							<div class="emphasis-title bottommargin-sm">
-								<h1 class="400" data-animate="fadeInUp" data-delay="600">最新訳書<br><span><em>加藤かおり</em></span>.</h1>
+								<h1 class="400" data-animate="fadeInUp" data-delay="600"><span><em>加藤かおり</em></span><br>最新訳書</h1>
 							</div>
 							<a data-animate="fadeIn" class="button button-large button-border button-white button-light button-rounded capitalize notopmargin" href="https://www.amazon.co.jp/%E3%81%99%E3%81%B9%E3%81%A6%E3%81%AF%E6%95%91%E6%B8%88%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AB%E2%80%95%E2%80%95%E3%83%87%E3%83%8B%E3%83%BB%E3%83%A0%E3%82%AF%E3%82%A6%E3%82%A7%E3%82%B2%E8%87%AA%E4%BC%9D-%E3%83%87%E3%83%8B%E3%83%BB%E3%83%A0%E3%82%AF%E3%82%A6%E3%82%A7%E3%82%B2/dp/4751529358/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&keywords=%E3%81%99%E3%81%B9%E3%81%A6%E3%81%AF%E6%95%91%E6%B8%88%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AB&qid=1565922205&s=books&sr=1-1"><span>Get it Now</span></a><br class="d-block d-sm-none">
 
@@ -148,7 +148,7 @@
 								<img src="demos/writer/images/section/2.png" alt="Book Mockup" style="margin-top: 10px;">
 							</div>
 							<div class="col-lg-6 offset-lg-1">
-								<h3 class="color t400" style="font-size: 36px;">Popular Book by<br>Mr. Newman</h3>
+								<h3 class="color t400" style="font-size: 36px;">加藤かおり<br>代表作</h3>
 								<p class="dark lead">
 									<span class="dropcap color font-secondary">L</span>orem ipsum dolor sit amet, consectetur adipisicing elit. Hic officiis fuga enim tenetur quasi saepe ipsum doloribus illum cumque. Commodi quidem culpa et! Molestias, dolor, illum autem similique voluptatum .
 								</p>
@@ -161,7 +161,7 @@
 						<div class="row clearfix">
 							<div class="col-lg-6">
 								<div class="heading-block dark tleft nobottomborder">
-									<h3 class="nott t400 ls0" style="font-size: 36px;">Latest Books</h3>
+									<h3 class="nott t400 ls0" style="font-size: 36px;">訳書</h3>
 								</div>
 							</div>
 						</div>
