--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 						<div class="center"><a href="#" class="button button-large button-white button-light capitalize topmargin-lg bottommargin button-rounded">View all Books</a></div>
 					</div>
 
-					<div class="dark subscribe-widget center topmargin-sm" style="background-color: rgba(0,0,0,.25); padding: 80px 0;">
+					<!-- <div class="dark subscribe-widget center topmargin-sm" style="background-color: rgba(0,0,0,.25); padding: 80px 0;">
 						<div class="container clearfix">
 							<div class="divcenter" style="max-width: 600px;">
 								<div class="heading-block center nobottomborder">
@@ -265,7 +265,7 @@
 								</form>
 							</div>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="video-wrap" style=" height: auto; position: absolute; left: 0; bottom: 0; z-index:1;">
 						<div class="video-overlay" style="background: -moz-linear-gradient(top,  rgba(30,35,42,1) 21%,, rgba(30,35,42,0) 100%); background: -webkit-linear-gradient(top,  rgba(30,35,42,1) 21%,rgba(30,35,42,0) 100%); background: linear-gradient(to bottom,  rgba(30,35,42,1) 21%,rgba(30,35,42,0) 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#001e232a', endColorstr='#1e232a',GradientType=0 );">
@@ -281,7 +281,7 @@
 
 						<div class="heading-block nobottomborder">
 							<i class="icon-book3 i-plain i-large divcenter center"></i>
-							<h3 class="nott t400 ls0" style="font-size: 36px;">Reader's Feedback</h3>
+							<h3 class="nott t400 ls0" style="font-size: 36px;">受賞歴</h3>
 						</div>
 
 					</div>
