話題作→略歴

--- a/index.html
+++ b/index.html
@@ -83,14 +83,7 @@
 									<li><a href="demos/writer/article-single.html"><div>動くのは瞼だけ　ロックトイン・シンドロームからの奇跡の再生</div></a></li>
 								</ul>
 							</li>
-							<li><a href="demos/writer/about-me.html"><div>略歴</div></a>
-							  <ul>
-									<li><div><p style="color:#333;">1966年　山形県山形市生まれ<br>国際基督教大学教養学部社会科学科卒業<br>2000年よりフリーランスの仏日翻訳者</p></div></li>
-								</ul>
-							</li>
-
 						</ul>
-
 						<ul>
 							<li><a href="index.html#section-testimonial"><div>Awards</div></a></li>
 							<li><a href="demos/writer/contact.html"><div>Contact</div></a></li>
@@ -148,11 +141,10 @@
 								<img src="demos/writer/images/section/2.png" alt="Book Mockup" style="margin-top: 10px;">
 							</div>
 							<div class="col-lg-6 offset-lg-1">
-								<h3 class="color t400" style="font-size: 36px;">加藤かおり<br>代表作</h3>
+								<h3 class="color t400" style="font-size: 36px;">加藤かおり<br>略歴</h3>
 								<p class="dark lead">
-									<span class="dropcap color font-secondary">L</span>orem ipsum dolor sit amet, consectetur adipisicing elit. Hic officiis fuga enim tenetur quasi saepe ipsum doloribus illum cumque. Commodi quidem culpa et! Molestias, dolor, illum autem similique voluptatum .
+									<span class="dropcap color font-secondary">K</span>1966年　山形県山形市生まれ<br>国際基督教大学教養学部社会科学科卒業<br>2000年よりフリーランスの仏日翻訳者
 								</p>
-								<a href="#" class="button button-large button-white button-light capitalize button-rounded">Know more</a>
 							</div>
 						</div>
 
