訳書リスト

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 						<div class="row clearfix">
 							<div class="col-lg-6">
 								<div class="heading-block dark tleft nobottomborder">
-									<h3 class="nott t400 ls0" style="font-size: 36px;">訳書</h3>
+									<h3 class="color t400 ls0" style="font-size: 36px;">訳書リスト</h3>
 								</div>
 							</div>
 						</div>
@@ -163,10 +163,10 @@
 							<div class="portfolio-item mb-3 mb-sm-0">
 								<div class="book-wrap">
 									<div class="book-card">
-										<a href="demos/writer/include/ajax/book-page.html" class="item-quick-view book-image" data-lightbox="ajax"><img src="demos/writer/images/books/1.png" alt="Book Image"></a>
+										<a href="demos/writer/include/ajax/book-page.html" class="item-quick-view book-image" data-lightbox="ajax"><img src="demos/writer/images/books/1.jpg" alt="Book Image"></a>
 										<div class="book-detail">
-											<h2 class="book-title"><a href="#">The Key of Mind</a></h2>
-											<small class="book-category"><a href="#">03 Jun, 2016</a></small>
+											<h2 class="book-title"><a href="#">すべては救済のために　デニ・ムクウェゲ自伝</a></h2>
+											<small class="book-category"><a href="#">あすなろ書房<br>2019年</a></small>
 											<div class="button button-white button-light capitalize button-circle"><i class="icon-line-zoom-in"></i><span>Quick View</span></div>
 										</div>
 									</div>
@@ -175,10 +175,10 @@
 							<div class="portfolio-item mb-3 mb-sm-0">
 								<div class="book-wrap">
 									<div class="book-card">
-										<a href="demos/writer/include/ajax/book-page.html" class="item-quick-view book-image" data-lightbox="ajax"><img src="demos/writer/images/books/2.png" alt="Book Image"></a>
+										<a href="demos/writer/include/ajax/book-page.html" class="item-quick-view book-image" data-lightbox="ajax"><img src="demos/writer/images/books/2.jpg" alt="Book Image"></a>
 										<div class="book-detail">
-											<h2 class="book-title"><a href="#">Knight Of The Light</a></h2>
-											<small class="book-category"><a href="#">11 Mar, 2016</a></small>
+											<h2 class="book-title"><a href="#">エマヌエル・マクロン ...</a></h2>
+											<small class="book-category"><a href="#">プレジデント社<br>2018年</a></small>
 											<div class="button button-white button-light capitalize button-circle"><i class="icon-line-zoom-in"></i><span>Quick View</span></div>
 										</div>
 									</div>
@@ -187,10 +187,10 @@
 							<div class="portfolio-item mb-3 mb-sm-0">
 								<div class="book-wrap">
 									<div class="book-card">
-										<a href="demos/writer/include/ajax/book-page.html" class="item-quick-view book-image" data-lightbox="ajax"><img src="demos/writer/images/books/3.png" alt="Book Image"></a>
+										<a href="demos/writer/include/ajax/book-page.html" class="item-quick-view book-image" data-lightbox="ajax"><img src="demos/writer/images/books/3.jpg" alt="Book Image"></a>
 										<div class="book-detail">
-											<h2 class="book-title"><a href="#">Jars and the Ten Killer</a></h2>
-											<small class="book-category"><a href="#">31 Jan, 2016</a></small>
+											<h2 class="book-title"><a href="#">ちいさな国で</a></h2>
+											<small class="book-category"><a href="#">早川書房<br>2017年</a></small>
 											<div class="button button-white button-light capitalize button-circle"><i class="icon-line-zoom-in"></i><span>Quick View</span></div>
 										</div>
 									</div>
@@ -200,10 +200,10 @@
 							<div class="portfolio-item mb-3 mb-sm-0">
 								<div class="book-wrap">
 									<div class="book-card">
-										<a href="demos/writer/include/ajax/book-page.html" class="item-quick-view book-image" data-lightbox="ajax"><img src="demos/writer/images/books/4.png" alt="Book Image"></a>
+										<a href="demos/writer/include/ajax/book-page.html" class="item-quick-view book-image" data-lightbox="ajax"><img src="demos/writer/images/books/4.jpg" alt="Book Image"></a>
 										<div class="book-detail">
-											<h2 class="book-title"><a href="#">Loves Without Flaws</a></h2>
-											<small class="book-category"><a href="#">22 Nov, 2015</a></small>
+											<h2 class="book-title"><a href="#">ささやかな手記</a></h2>
+											<small class="book-category"><a href="#">早川書房<br>2016年</a></small>
 											<div class="button button-white button-light capitalize button-circle"><i class="icon-line-zoom-in"></i><span>Quick View</span></div>
 										</div>
 									</div>
@@ -212,10 +212,10 @@
 							<div class="portfolio-item mb-3 mb-sm-0">
 								<div class="book-wrap">
 									<div class="book-card">
-										<a href="demos/writer/include/ajax/book-page.html" class="item-quick-view book-image" data-lightbox="ajax"><img src="demos/writer/images/books/5.png" alt="Book Image"></a>
+										<a href="demos/writer/include/ajax/book-page.html" class="item-quick-view book-image" data-lightbox="ajax"><img src="demos/writer/images/books/5.jpg" alt="Book Image"></a>
 										<div class="book-detail">
-											<h2 class="book-title"><a href="#">Pirates Of Water</a></h2>
-											<small class="book-category"><a href="#">01 Sep, 2015</a></small>
+											<h2 class="book-title"><a href="#">マプチェの女</a></h2>
+											<small class="book-category"><a href="#">早川書房<br>2016年<br>共訳</a></small>
 											<div class="button button-white button-light capitalize button-circle"><i class="icon-line-zoom-in"></i><span>Quick View</span></div>
 										</div>
 									</div>
@@ -224,10 +224,10 @@
 							<div class="portfolio-item mb-3 mb-sm-0">
 								<div class="book-wrap">
 									<div class="book-card">
-										<a href="demos/writer/include/ajax/book-page.html" class="item-quick-view book-image" data-lightbox="ajax"><img src="demos/writer/images/books/6.png" alt="Book Image"></a>
+										<a href="demos/writer/include/ajax/book-page.html" class="item-quick-view book-image" data-lightbox="ajax"><img src="demos/writer/images/books/6.jpg" alt="Book Image"></a>
 										<div class="book-detail">
-											<h2 class="book-title"><a href="#">Amusing The Jungle</a></h2>
-											<small class="book-category"><a href="#">10 Feb, 2015</a></small>
+											<h2 class="book-title"><a href="#">星の王子さまの美しい物語</a></h2>
+											<small class="book-category"><a href="#">飛鳥新社<br>2015年<br>共訳</a></small>
 											<div class="button button-white button-light capitalize button-circle"><i class="icon-line-zoom-in"></i><span>Quick View</span></div>
 										</div>
 									</div>
