訳書リストfinished

--- a/index.html
+++ b/index.html
@@ -233,6 +233,78 @@
 									</div>
 								</div>
 							</div>
+							<div class="portfolio-item mb-3 mb-sm-0">
+								<div class="book-wrap">
+									<div class="book-card">
+										<a href="demos/writer/include/ajax/book-page.html" class="item-quick-view book-image" data-lightbox="ajax"><img src="demos/writer/images/books/7.jpg" alt="Book Image"></a>
+										<div class="book-detail">
+											<h2 class="book-title"><a href="#">いま、目の前で起きていることの意味について</a></h2>
+											<small class="book-category"><a href="#">早川書房<br>2010年<br>共訳</a></small>
+											<div class="button button-white button-light capitalize button-circle"><i class="icon-line-zoom-in"></i><span>Quick View</span></div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="portfolio-item mb-3 mb-sm-0">
+								<div class="book-wrap">
+									<div class="book-card">
+										<a href="demos/writer/include/ajax/book-page.html" class="item-quick-view book-image" data-lightbox="ajax"><img src="demos/writer/images/books/8.jpg" alt="Book Image"></a>
+										<div class="book-detail">
+											<h2 class="book-title"><a href="#">ココ・アヴァン・シャネル　愛とファッションの革命児</a></h2>
+											<small class="book-category"><a href="#">早川書房<br>2009年<br>共訳</a></small>
+											<div class="button button-white button-light capitalize button-circle"><i class="icon-line-zoom-in"></i><span>Quick View</span></div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="portfolio-item mb-3 mb-sm-0">
+								<div class="book-wrap">
+									<div class="book-card">
+										<a href="demos/writer/include/ajax/book-page.html" class="item-quick-view book-image" data-lightbox="ajax"><img src="demos/writer/images/books/9.jpg" alt="Book Image"></a>
+										<div class="book-detail">
+											<h2 class="book-title"><a href="#">ノーと私</a></h2>
+											<small class="book-category"><a href="#">NHK出版<br>2008年</a></small>
+											<div class="button button-white button-light capitalize button-circle"><i class="icon-line-zoom-in"></i><span>Quick View</span></div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="portfolio-item mb-3 mb-sm-0">
+								<div class="book-wrap">
+									<div class="book-card">
+										<a href="demos/writer/include/ajax/book-page.html" class="item-quick-view book-image" data-lightbox="ajax"><img src="demos/writer/images/books/10.jpg" alt="Book Image"></a>
+										<div class="book-detail">
+											<h2 class="book-title"><a href="#">「タラ・ダンカン」シリーズ5~12巻</a></h2>
+											<small class="book-category"><a href="#">KADOKAWA/メディアファクトリー<br>2008年~2015年<br>共訳</a></small>
+											<div class="button button-white button-light capitalize button-circle"><i class="icon-line-zoom-in"></i><span>Quick View</span></div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="portfolio-item mb-3 mb-sm-0">
+								<div class="book-wrap">
+									<div class="book-card">
+										<a href="demos/writer/include/ajax/book-page.html" class="item-quick-view book-image" data-lightbox="ajax"><img src="demos/writer/images/books/11.jpg" alt="Book Image"></a>
+										<div class="book-detail">
+											<h2 class="book-title"><a href="#">幻想の帝国　中国の声なき声</a></h2>
+											<small class="book-category"><a href="#">駿河台出版社<br>2008年<br>共訳</a></small>
+											<div class="button button-white button-light capitalize button-circle"><i class="icon-line-zoom-in"></i><span>Quick View</span></div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="portfolio-item mb-3 mb-sm-0">
+								<div class="book-wrap">
+									<div class="book-card">
+										<a href="demos/writer/include/ajax/book-page.html" class="item-quick-view book-image" data-lightbox="ajax"><img src="demos/writer/images/books/12.jpg" alt="Book Image"></a>
+										<div class="book-detail">
+											<h2 class="book-title"><a href="#">動くのは瞼だけ</a></h2>
+											<small class="book-category"><a href="#">イースト・プレス<br>2008年</a></small>
+											<div class="button button-white button-light capitalize button-circle"><i class="icon-line-zoom-in"></i><span>Quick View</span></div>
+										</div>
+									</div>
+								</div>
+							</div>
 
 						</div>
 
