--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<li><a href="demos/writer/article-single.html"><div>いま、目の前で起きていることの意味について--行動する33の知性</div></a></li>
 									<li><a href="demos/writer/article-single.html"><div>ココ・アヴァン・シャネル　愛とファッションの革命児</div></a></li>
 									<li><a href="demos/writer/article-single.html"><div>ノーと私</div></a></li>
-									<li><a href="demos/writer/article-single.html"><div>タラ・ダンカン</div></a></li>
+									<li><a href="demos/writer/article-single.html"><div>「タラ・ダンカン」シリーズ</div></a></li>
 									<li><a href="demos/writer/article-single.html"><div>幻想の帝国　中国の声なき声</div></a></li>
 
 									<li><a href="demos/writer/article-single.html"><div>動くのは瞼だけ　ロックトイン・シンドロームからの奇跡の再生</div></a></li>
@@ -105,7 +105,7 @@
 				<div class="container dark clearfix">
 					<div class="row clearfix">
 						<div class="col-lg-6 offset-lg-1 col-md-8" data-lightbox="gallery">
-							<a href="demos/writer/images/hero/book-deni.jpg gallery-item" class="slider-book-img" data-animate="fadeInUp"><img src="demos/writer/images/hero/book-deni.jpg" alt=""></a>
+							<a href="demos/writer/images/hero/book-deni2.jpg" data-lightbox="gallery-item" class="slider-book-img" data-animate="fadeInUp"><img src="demos/writer/images/hero/book-deni2.jpg" alt=""></a>
 							<!-- <a href="demos/writer/images/hero/slider-book2-lg.jpg" data-lightbox="gallery-item" class="slider-book-img" data-animate="fadeInUp" data-delay="300"><img src="demos/writer/images/hero/book-deni2.jpg" alt=""></a> -->
 							<div class="emphasis-title bottommargin-sm">
 								<h1 class="400" data-animate="fadeInUp" data-delay="600"><span><em>加藤かおり</em></span><br>最新訳書</h1>
@@ -308,7 +308,9 @@
 
 						</div>
 
-						<div class="center"><a href="#" class="button button-large button-white button-light capitalize topmargin-lg bottommargin button-rounded">View all Books</a></div>
+						<div class="center">
+							<!-- <a href="#" class="button button-large button-white button-light capitalize topmargin-lg bottommargin button-rounded"></a> -->
+						</div>
 					</div>
 
 					<!-- <div class="dark subscribe-widget center topmargin-sm" style="background-color: rgba(0,0,0,.25); padding: 80px 0;">
