--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
 						<div class="heading-block nobottomborder">
 							<i class="icon-book3 i-plain i-large divcenter center"></i>
-							<h3 class="nott t400 ls0" style="font-size: 36px;">受賞歴</h3>
+								<h3 class="nott t400 ls0" style="font-size: 36px;">日仏翻訳文学賞</h3>
 						</div>
 
 					</div>
@@ -357,17 +357,20 @@
 							<div class="slider-wrap divcenter" style="max-width: 650px;">
 								<div class="slide">
 									<div class="testi-image">
-										<a href="#"><img src="images/testimonials/3.jpg" alt="Customer Testimonails"></a>
+										<a href="#"><img src="demos/writer/images/books/3.jpg" alt="Customer Testimonails"></a>
 									</div>
 									<div class="testi-content">
-										<p>Similique fugit repellendus expedita excepturi iure provident quia eaque. Repellendus, vero numquam?</p>
+										<p>　日本とフランスの優れた翻訳作品に贈られる第２４回日仏翻訳文学賞（小西国際交流財団主催）が、フリー翻訳者、加藤かおりさん（５２）訳の『ちいさな国で』（ガエル・ファイユ著、早川書房）に決まり、３日に東京都港区の駐日フランス大使公邸で授賞式が行われた。<br>
+
+												　受賞作はアフリカのルワンダやブルンジでの民族対立の悲惨な現実を少年たちの視線で写し出す。ラッパーとしても活躍する著者の歯切れの良い文章を、やわらかな日本語へ置き換えた訳業が高く評価された。<br>
+
+												　受賞スピーチで「翻訳はあくまで原作あってのもの」と控えめに喜びを語った加藤さん。「『究極の精読』といわれる翻訳作業を続け、一冊の本を訳し切ったときには世界や人間に向けるまなざしが変わり、自分の人生が豊かになったという確かな実感を抱くことがある。今回の名誉ある賞を励みに、そうした読書の醍醐味（だいごみ）を伝える翻訳の仕事を続けたい」と抱負を述べた。</p>
 										<div class="testi-meta">
-											Steve Jobs
-											<span>Apple Inc.</span>
+											産経新聞（2019/6/8)
 										</div>
 									</div>
 								</div>
-								<div class="slide">
+								<!-- <div class="slide">
 									<div class="testi-image">
 										<a href="#"><img src="images/testimonials/2.jpg" alt="Customer Testimonails"></a>
 									</div>
@@ -388,7 +391,7 @@
 										<div class="testi-meta">
 											John Doe
 											<span>XYZ Inc.</span>
-										</div>
+										</div> -->
 									</div>
 								</div>
 							</div>
