--- a/index.html
+++ b/index.html
@@ -284,11 +284,11 @@
 							<div class="portfolio-item mb-3 mb-sm-0">
 								<div class="book-wrap">
 									<div class="book-card">
-										<a href="demos/writer/include/ajax/book-page.html" class="item-quick-view book-image" data-lightbox="ajax"><img src="demos/writer/images/books/11.jpg" alt="Book Image"></a>
+											<a href="https://www.amazon.co.jp/%E5%B9%BB%E6%83%B3%E3%81%AE%E5%B8%9D%E5%9B%BD%E2%80%95%E4%B8%AD%E5%9B%BD%E3%81%AE%E5%A3%B0%E3%81%AA%E3%81%8D%E5%A3%B0-%E3%82%AE-%E3%82%BD%E3%83%AB%E3%83%9E%E3%83%B3/dp/4411003813/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&keywords=%E5%B9%BB%E6%83%B3%E3%81%AE%E5%B8%9D%E5%9B%BD+%E5%8A%A0%E8%97%A4%E3%81%8B%E3%81%8A%E3%82%8A&qid=1566048085&s=books&sr=1-1" target="_blank"  class="item-quick-view book-image" data-lightbox="ajax"><img src="demos/writer/images/books/11.jpg" alt="Book Image"></a>
 										<div class="book-detail">
 											<h2 class="book-title"><a href="#">幻想の帝国　中国の声なき声</a></h2>
 											<small class="book-category"><a href="#">駿河台出版社<br>2008年<br>共訳</a></small>
-											<div class="button button-white button-light capitalize button-circle"><i class="icon-line-zoom-in"></i><span>Quick View</span></div>
+											<div class="button button-white button-light capitalize button-circle"><i class="icon-line-zoom-in"></i><span>show</span></div>
 										</div>
 									</div>
 								</div>
@@ -357,7 +357,7 @@
 							<div class="slider-wrap divcenter" style="max-width: 650px;">
 								<div class="slide">
 									<div class="testi-image">
-										<a href="#"><img src="demos/writer/images/books/3.jpg" alt="Customer Testimonails"></a>
+										<img src="demos/writer/images/books/3.jpg" alt="book">
 									</div>
 									<div class="testi-content">
 										<p>　日本とフランスの優れた翻訳作品に贈られる第２４回日仏翻訳文学賞（小西国際交流財団主催）が、フリー翻訳者、加藤かおりさん（５２）訳の『ちいさな国で』（ガエル・ファイユ著、早川書房）に決まり、３日に東京都港区の駐日フランス大使公邸で授賞式が行われた。<br>
@@ -396,14 +396,11 @@
 								</div>
 							</div>
 						</div>
-
 					</div>
+					</div>
+				</section>
 
-				</div>
-
-			</div>
-
-		</section><!-- #content end -->
+<!-- #content end -->
 
 		<!-- Footer
 		============================================= -->
@@ -422,7 +419,7 @@
 								<div class="row clearfix">
 									<div class="col-lg-8 clearfix" style="color: #888;">
 										<img src="demos/writer/images/logo.png" alt="Canvas Logo" style="display: block;" class="bottommargin-sm">
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio, consequatur facere molestiae iusto atque.</p>
+
 
 										<a href="#" class="social-icon si-small si-borderless si-colored si-rounded si-facebook">
 											<i class="icon-facebook"></i>
@@ -454,56 +451,8 @@
 							</div>
 
 						</div>
-
-						<div class="col-lg-7">
-							<div class="row clearfix">
-
-								<div class="col-lg-4">
-									<div class="widget widget_links app_landing_widget_link clearfix">
-										<h4>In News</h4>
-
-										<ul>
-											<li><a href="http://codex.wordpress.org/">Documentation</a></li>
-											<li><a href="http://wordpress.org/support/forum/requests-and-feedback">Feedback</a></li>
-											<li><a href="http://wordpress.org/extend/plugins/">Plugins</a></li>
-											<li><a href="http://wordpress.org/support/">Support Forums</a></li>
-											<li><a href="http://wordpress.org/extend/themes/">Themes</a></li>
-										</ul>
-									</div>
-								</div>
-								<div class="col-lg-4">
-									<div class="widget widget_links app_landing_widget_link clearfix">
-										<h4>About Us</h4>
-
-										<ul>
-											<li><a href="http://codex.wordpress.org/">Documentation</a></li>
-											<li><a href="http://wordpress.org/support/forum/requests-and-feedback">Feedback</a></li>
-											<li><a href="http://wordpress.org/extend/plugins/">Plugins</a></li>
-											<li><a href="http://wordpress.org/support/">Support Forums</a></li>
-											<li><a href="http://wordpress.org/extend/themes/">Themes</a></li>
-										</ul>
-									</div>
-								</div>
-								<div class="col-lg-4">
-									<div class="widget widget_links app_landing_widget_link clearfix">
-										<h4>Support</h4>
-
-										<ul>
-											<li><a href="http://codex.wordpress.org/">Documentation</a></li>
-											<li><a href="http://wordpress.org/support/forum/requests-and-feedback">Feedback</a></li>
-											<li><a href="http://wordpress.org/extend/plugins/">Plugins</a></li>
-											<li><a href="http://wordpress.org/support/">Support Forums</a></li>
-											<li><a href="http://wordpress.org/extend/themes/">Themes</a></li>
-										</ul>
-									</div>
-								</div>
-
-							</div>
-						</div>
-
-					</div>
+	 				</div>
 				</div>
-
 			</div>
 
 			<!-- Copyrights
