--- a/index.html
+++ b/index.html
@@ -370,35 +370,13 @@
 										</div>
 									</div>
 								</div>
-								<!-- <div class="slide">
-									<div class="testi-image">
-										<a href="#"><img src="images/testimonials/2.jpg" alt="Customer Testimonails"></a>
-									</div>
-									<div class="testi-content">
-										<p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
-										<div class="testi-meta">
-											Collis Ta'eed
-											<span>Envato Inc.</span>
-										</div>
-									</div>
-								</div>
-								<div class="slide">
-									<div class="testi-image">
-										<a href="#"><img src="images/testimonials/1.jpg" alt="Customer Testimonails"></a>
-									</div>
-									<div class="testi-content">
-										<p>Incidunt deleniti blanditiis quas aperiam recusandae consequatur ullam quibusdam cum libero illo rerum!</p>
-										<div class="testi-meta">
-											John Doe
-											<span>XYZ Inc.</span>
-										</div> -->
-									</div>
+
 								</div>
 							</div>
 						</div>
 					</div>
-					</div>
-				</section>
+				</div>
+			</section>
 
 <!-- #content end -->
 
@@ -417,8 +395,8 @@
 
 							<div class="widget clearfix">
 								<div class="row clearfix">
-									<div class="col-lg-8 clearfix" style="color: #888;">
-										<img src="demos/writer/images/logo.png" alt="Canvas Logo" style="display: block;" class="bottommargin-sm">
+									<div class="col-lg-8 clearfix" style="color: #888;　">
+										<img src="demos/writer/images/logo.png" alt="Canvas Logo"  class="bottommargin-sm">
 
 
 										<a href="#" class="social-icon si-small si-borderless si-colored si-rounded si-facebook">
