--- a/index.html
+++ b/index.html
@@ -440,8 +440,7 @@
 				<div class="container clearfix">
 
 					<div class="col_half" style="z-index: 3">
-						Copyrights &copy; 2016 All Rights Reserved by Canvas Inc.<br>
-						<div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>
+						Copyrights &copy; 2019 All Rights Reserved by Chikakoweb.com
 					</div>
 
 				</div>
