heroイメージ変更

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
 						<ul>
 							<li><a href="index.html"><div>Home</div></a></li>
-							<li><a href="demos/writer/article-single.html"><div>訳書リスト</div></a>
-								<ul>
+							<li><a href="index.html#portfolio"><div>訳書リスト</div></a>
+								<!-- <ul>
 									<li><a href="demos/writer/article-single.html"><div>すべては救済のために  デニ・ムクウェゲ自伝</div></a></li>
 									<li><a href="demos/writer/article-single.html"><div>エマヌエル・マクロン フランス大統領に上り詰めた完璧な青年</div></a></li>
 									<li><a href="demos/writer/article-single.html"><div>ちいさな国で</div></a></li>
@@ -81,15 +81,16 @@
 									<li><a href="demos/writer/article-single.html"><div>幻想の帝国  中国の声なき声</div></a></li>
 
 									<li><a href="demos/writer/article-single.html"><div>動くのは瞼だけ  ロックトイン・シンドロームからの奇跡の再生</div></a></li>
-								</ul>
+								</ul> -->
 							</li>
 						</ul>
 						<ul>
 							<li><a href="index.html#section-testimonial"><div>Awards</div></a></li>
-							<li><a href="demos/writer/contact.html"><div>Contact</div></a></li>
+							<!-- <li><a href="index.html#footer"><div>Contact</div></a></li> -->
 						</ul>
 
-					</nav><!-- #primary-menu end -->
+					</nav>
+					<!-- #primary-menu end -->
 
 				</div>
 
