--- a/index.html
+++ b/index.html
@@ -67,21 +67,6 @@
 						<ul>
 							<li><a href="index.html"><div>Home</div></a></li>
 							<li><a href="index.html#portfolio"><div>訳書リスト</div></a>
-								<!-- <ul>
-									<li><a href="demos/writer/article-single.html"><div>すべては救済のために  デニ・ムクウェゲ自伝</div></a></li>
-									<li><a href="demos/writer/article-single.html"><div>エマヌエル・マクロン フランス大統領に上り詰めた完璧な青年</div></a></li>
-									<li><a href="demos/writer/article-single.html"><div>ちいさな国で</div></a></li>
-									<li><a href="demos/writer/article-single.html"><div>ささやかな手記</div></a></li>
-									<li><a href="demos/writer/article-single.html"><div>マプチェの女</div></a></li>
-									<li><a href="demos/writer/article-single.html"><div>星の王子さまの美しい物語</div></a></li>
-									<li><a href="demos/writer/article-single.html"><div>いま、目の前で起きていることの意味について--行動する33の知性</div></a></li>
-									<li><a href="demos/writer/article-single.html"><div>ココ・アヴァン・シャネル  愛とファッションの革命児</div></a></li>
-									<li><a href="demos/writer/article-single.html"><div>ノーと私</div></a></li>
-									<li><a href="demos/writer/article-single.html"><div>「タラ・ダンカン」シリーズ</div></a></li>
-									<li><a href="demos/writer/article-single.html"><div>幻想の帝国  中国の声なき声</div></a></li>
-
-									<li><a href="demos/writer/article-single.html"><div>動くのは瞼だけ  ロックトイン・シンドロームからの奇跡の再生</div></a></li>
-								</ul> -->
 							</li>
 						</ul>
 						<ul>
@@ -105,13 +90,15 @@
 			<div class="vertical-middle ignore-header" style="z-index: 3;">
 				<div class="container dark clearfix">
 					<div class="row clearfix">
-						<div class="col-lg-6 offset-lg-1 col-md-8" data-lightbox="gallery">
+
+						<div class="col-lg-4 offset-lg-1 col-md-6" data-lightbox="gallery" style="background-color: rgba(0, 0, 0, 0.7); padding :10px;">
 							<a href="demos/writer/images/hero/book-deni2.jpg" data-lightbox="gallery-item" class="slider-book-img" data-animate="fadeInUp"><img src="demos/writer/images/hero/book-deni2.jpg" alt=""></a>
 							<!-- <a href="demos/writer/images/hero/slider-book2-lg.jpg" data-lightbox="gallery-item" class="slider-book-img" data-animate="fadeInUp" data-delay="300"><img src="demos/writer/images/hero/book-deni2.jpg" alt=""></a> -->
+
 							<div class="emphasis-title bottommargin-sm">
-								<h1 class="400" data-animate="fadeInUp" data-delay="600"><span><em>加藤かおり</em></span><br>最新訳書</h1>
+								<h1 class="400" data-animate="fadeInUp" data-delay="600"  ><span><em>加藤かおり</em></span><br>最新訳書</h1>
 							</div>
-							<a data-animate="fadeIn" class="button button-large button-border button-white button-light button-rounded capitalize notopmargin" href="https://www.amazon.co.jp/%E3%81%99%E3%81%B9%E3%81%A6%E3%81%AF%E6%95%91%E6%B8%88%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AB%E2%80%95%E2%80%95%E3%83%87%E3%83%8B%E3%83%BB%E3%83%A0%E3%82%AF%E3%82%A6%E3%82%A7%E3%82%B2%E8%87%AA%E4%BC%9D-%E3%83%87%E3%83%8B%E3%83%BB%E3%83%A0%E3%82%AF%E3%82%A6%E3%82%A7%E3%82%B2/dp/4751529358/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&keywords=%E3%81%99%E3%81%B9%E3%81%A6%E3%81%AF%E6%95%91%E6%B8%88%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AB&qid=1565922205&s=books&sr=1-1"><span>Get it Now(Amazon)</span></a><br class="d-block d-sm-none">
+							<a data-animate="fadeIn" class="button button-large button-border button-white button-light button-rounded capitalize notopmargin" href="https://www.amazon.co.jp/%E3%81%99%E3%81%B9%E3%81%A6%E3%81%AF%E6%95%91%E6%B8%88%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AB%E2%80%95%E2%80%95%E3%83%87%E3%83%8B%E3%83%BB%E3%83%A0%E3%82%AF%E3%82%A6%E3%82%A7%E3%82%B2%E8%87%AA%E4%BC%9D-%E3%83%87%E3%83%8B%E3%83%BB%E3%83%A0%E3%82%AF%E3%82%A6%E3%82%A7%E3%82%B2/dp/4751529358/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&keywords=%E3%81%99%E3%81%B9%E3%81%A6%E3%81%AF%E6%95%91%E6%B8%88%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AB&qid=1565922205&s=books&sr=1-1"><span>Get it Now</span></a><br class="d-block d-sm-none">
 
 						</div>
 					</div>
