画像並べかえ

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 							<div class="col-lg-6 offset-lg-1">
 								<h3 class="color t400" style="font-size: 36px;">加藤かおり<br>略歴</h3>
 								<p class="dark lead">
-									<span class="dropcap color font-secondary">K</span>1966年　山形県山形市生まれ<br>国際基督教大学教養学部社会科学科卒業<br>2000年よりフリーランスの仏日翻訳者
+									<span class="dropcap color font-secondary">K</span>1966年  山形県山形市生まれ<br>国際基督教大学教養学部社会科学科卒業<br>2000年よりフリーランスの仏日翻訳者
 								</p>
 							</div>
 						</div>
@@ -141,7 +141,7 @@
 						<div class="row clearfix">
 							<div class="col-lg-6">
 								<div class="heading-block dark tleft nobottomborder">
-									<h3 class="color t400 ls0" style="font-size: 36px;">訳書リスト</h3>
+									<h3 class="color t400 ls0" style="font-size: 36px;">訳書リスト</h3><h5>※画像クリックでAmazonサイトが開きます</h5>
 								</div>
 							</div>
 						</div>
@@ -196,11 +196,9 @@
 								<div class="book-wrap">
 									<div class="book-card">
 										<a href="https://www.amazon.co.jp/%E6%98%9F%E3%81%AE%E7%8E%8B%E5%AD%90%E3%81%95%E3%81%BE%E3%81%AE%E7%BE%8E%E3%81%97%E3%81%84%E7%89%A9%E8%AA%9E-%E3%82%A2%E3%83%B3%E3%83%AF%EF%BC%8D%E3%83%8C%E3%83%BB%E3%83%89%E3%83%BB%E3%82%B5%E3%83%B3%EF%BC%9D%E3%83%87%E3%82%B0%E3%82%B8%E3%83%A5%E3%83%9A%E3%83%AA/dp/4864103984/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&keywords=%E6%98%9F%E3%81%AE%E7%8E%8B%E5%AD%90%E3%81%95%E3%81%BE%E3%81%AE%E7%BE%8E%E3%81%97%E3%81%84%E7%89%A9%E8%AA%9E&qid=1566279734&s=books&sr=1-1" class="item-quick-view book-image" target="_new"><img src="demos/writer/images/books/6.jpg" alt="星の王子さまの美しい物語"></a>
-
 										</div>
 									</div>
 								</div>
-							</div>
 							<div class="portfolio-item mb-3 mb-sm-0">
 								<div class="book-wrap">
 									<div class="book-card">
@@ -208,7 +206,6 @@
 										</div>
 									</div>
 								</div>
-
 							<div class="portfolio-item mb-3 mb-sm-0">
 								<div class="book-wrap">
 									<div class="book-card">
@@ -216,7 +213,6 @@
 										</div>
 									</div>
 								</div>
-
 							<div class="portfolio-item mb-3 mb-sm-0">
 								<div class="book-wrap">
 									<div class="book-card">
@@ -224,7 +220,6 @@
 									</div>
 								</div>
 							</div>
-
 							<div class="portfolio-item mb-3 mb-sm-0">
 								<div class="book-wrap">
 									<div class="book-card">
@@ -335,8 +330,8 @@
 
 							<div class="widget clearfix">
 								<div class="row clearfix">
-									<div class="col-lg-8 clearfix" style="color: #888;　">
-										<img src="demos/writer/images/logo.png" alt="Canvas Logo"  class="bottommargin-sm">
+									<div class="col-lg-8 clearfix" style="color: #888;">
+										<img src="demos/writer/images/logo.png" alt="Logo"  class="bottommargin-sm">
 
 
 										<a href="#" class="social-icon si-small si-borderless si-colored si-rounded si-facebook">
