snsアイコン位置調整　imgサイズ調整

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>加藤かおり：仏日翻訳者</title>
+	<title>加藤かおり：仏日翻訳家</title>
 
 </head>
 
@@ -92,8 +92,7 @@
 					<div class="row clearfix">
 
 						<div class="col-lg-4 offset-lg-1 col-md-6" data-lightbox="gallery" style="background-color: rgba(0, 0, 0, 0.7); padding :10px;">
-							<a href="demos/writer/images/hero/book-deni2.jpg" data-lightbox="gallery-item" class="slider-book-img" data-animate="fadeInUp"><img src="demos/writer/images/hero/book-deni2.jpg" alt=""></a>
-							<!-- <a href="demos/writer/images/hero/slider-book2-lg.jpg" data-lightbox="gallery-item" class="slider-book-img" data-animate="fadeInUp" data-delay="300"><img src="demos/writer/images/hero/book-deni2.jpg" alt=""></a> -->
+							<div data-lightbox="gallery-item" class="slider-book-img" data-animate="fadeInUp"><img src="demos/writer/images/hero/book-deni2.jpg" alt="latest book image"></div>
 
 							<div class="emphasis-title bottommargin-sm">
 								<h1 class="400" data-animate="fadeInUp" data-delay="600"  ><span><em>加藤かおり</em></span><br>最新訳書</h1>
@@ -332,7 +331,7 @@
 								<div class="row clearfix">
 									<div class="col-lg-8 clearfix" style="color: #888;">
 										<img src="demos/writer/images/logo.png" alt="Logo"  class="bottommargin-sm">
-
+</div></div>
 
 										<a href="#" class="social-icon si-small si-borderless si-colored si-rounded si-facebook">
 											<i class="icon-facebook"></i>
@@ -344,7 +343,7 @@
 											<i class="icon-twitter"></i>
 										</a>
 
-										<a href="#" class="social-icon si-small si-borderless si-colored si-rounded si-gplus">
+										<!-- <a href="#" class="social-icon si-small si-borderless si-colored si-rounded si-gplus">
 											<i class="icon-gplus"></i>
 											<i class="icon-gplus"></i>
 										</a>
@@ -357,7 +356,7 @@
 										<a href="#" class="social-icon si-small si-borderless si-colored si-rounded si-vimeo">
 											<i class="icon-vimeo"></i>
 											<i class="icon-vimeo"></i>
-										</a>
+										</a> -->
 
 									</div>
 								</div>
@@ -365,8 +364,7 @@
 
 						</div>
 	 				</div>
-				</div>
-			</div>
+
 
 			<!-- Copyrights
 			============================================= -->
