--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 						<div class="row clearfix">
 							<div class="col-lg-4 offset-lg-1">
-								<img src="demos/writer/images/section/2.png" alt="Book Mockup" style="margin-top: 10px;">
+								<img src="demos/writer/images/section/2.png" alt="Book Mockup" style="margin-top: 10px; max-width: 100%;">
 							</div>
 							<div class="col-lg-6 offset-lg-1">
 								<h3 class="color t400" style="font-size: 36px;">加藤かおり<br>略歴</h3>
