--- a/index.html
+++ b/index.html
@@ -145,15 +145,12 @@
 							</div>
 						</div>
 
-						<div id="portfolio">
+						<div id="portfolio" class="portfolio grid-container portfolio-3 portfolio-masonry clearfix">
 
 							<div class="portfolio-item mb-3 mb-sm-0">
 								<div class="book-wrap">
 									<div class="book-card">
-
-
-										<a href="https://www.amazon.co.jp/%E3%81%99%E3%81%B9%E3%81%A6%E3%81%AF%E6%95%91%E6%B8%88%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AB%E2%80%95%E2%80%95%E3%83%87%E3%83%8B%E3%83%BB%E3%83%A0%E3%82%AF%E3%82%A6%E3%82%A7%E3%82%B2%E8%87%AA%E4%BC%9D-%E3%83%87%E3%83%8B%E3%83%BB%E3%83%A0%E3%82%AF%E3%82%A6%E3%82%A7%E3%82%B2/dp/4751529358/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&keywords=%E3%81%99%E3%81%B9%E3%81%A6%E3%81%AF%E6%95%91%E6%B8%88%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AB&qid=1565922205&s=books&sr=1-1" target="_blank"><img src="demos/writer/images/books/1.jpg" alt="すべては救済のために"></a>
-										</div>
+										<a href="https://www.amazon.co.jp/%E3%81%99%E3%81%B9%E3%81%A6%E3%81%AF%E6%95%91%E6%B8%88%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AB%E2%80%95%E2%80%95%E3%83%87%E3%83%8B%E3%83%BB%E3%83%A0%E3%82%AF%E3%82%A6%E3%82%A7%E3%82%B2%E8%87%AA%E4%BC%9D-%E3%83%87%E3%83%8B%E3%83%BB%E3%83%A0%E3%82%AF%E3%82%A6%E3%82%A7%E3%82%B2/dp/4751529358/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&keywords=%E3%81%99%E3%81%B9%E3%81%A6%E3%81%AF%E6%95%91%E6%B8%88%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AB&qid=1565922205&s=books&sr=1-1" target="_blank" class="item-quick-view book-image"><img src="demos/writer/images/books/1.jpg" alt="すべては救済のために"></a>
 
 									</div>
 								</div>
@@ -245,7 +242,7 @@
 
 						</div></div>
 
-
+						<div class="clear topmargin-sm bottommargin-lg"></div>
 
 					<!-- <div class="dark subscribe-widget center topmargin-sm" style="background-color: rgba(0,0,0,.25); padding: 80px 0;">
 						<div class="container clearfix">
